--- a/EEPROM/MDK-ARM/EEPROM/EEPROM.build_log.htm
+++ b/EEPROM/MDK-ARM/EEPROM/EEPROM.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
-D:\study_7\POVS\EEPROM\MDK-ARM\EEPROM.uvprojx
+D:\study_7\POVS\TestingSRAMSystem\EEPROM\MDK-ARM\EEPROM.uvprojx
 Project File Date:  10/28/2022
 
 <h2>Output:</h2>
@@ -29,7 +29,7 @@ Project File Date:  10/28/2022
 Build target 'EEPROM'
 compiling main.c...
 linking...
-Program Size: Code=7702 RO-data=310 RW-data=16 ZI-data=1824  
+Program Size: Code=7790 RO-data=310 RW-data=12 ZI-data=1868  
 FromELF: creating hex file...
 "EEPROM\EEPROM.axf" - 0 Error(s), 0 Warning(s).
 
